--- a/src/ManageDataPage.form
+++ b/src/ManageDataPage.form
@@ -86,6 +86,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add New Classification"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addClsfBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="clsfLabel">
       <Properties>
@@ -158,6 +161,9 @@
                   <Dimension value="[400, 256]"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="imageTableMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -174,13 +180,13 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="deleteImageBtn" alignment="0" pref="136" max="32767" attributes="0"/>
-                  <Component id="jLabel2" alignment="0" max="32767" attributes="0"/>
+                  <Component id="imageData" alignment="0" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jLabel2" min="-2" pref="204" max="-2" attributes="0"/>
+                      <Component id="imageData" min="-2" pref="204" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="deleteImageBtn" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -188,12 +194,15 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JLabel" name="jLabel2">
+            <Component class="javax.swing.JLabel" name="imageData">
             </Component>
             <Component class="javax.swing.JButton" name="deleteImageBtn">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Delete Image"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deleteImageBtnActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
