--- a/src/ManageDataPage.form
+++ b/src/ManageDataPage.form
@@ -266,6 +266,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Rename This Classification"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="renameClsfBtnActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
