--- a/src/QueryProcessPage.form
+++ b/src/QueryProcessPage.form
@@ -192,6 +192,9 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="imagePosLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="8" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="[DIRECTORY HERE]"/>
           </Properties>
         </Component>
